--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,6 +3,16 @@
   "name": "Purcmium - Premium Affiliate Marketing",
   "icons": [
     {
+      "src": "perciumt.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "perciumt.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
