--- a/server/.env.example
+++ b/server/.env.example
@@ -4,9 +4,11 @@ NODE_ENV=development
 
 # Database
 MONGO_URI=mongodb://localhost:27017/purcmium
-# For production: MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/purcmium
+# For MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/purcmium
+MONGODB_ATLAS_URI=
 
-# JWT Configuration
+# JWT Configuration (GENERATE NEW SECRET FOR PRODUCTION!)
+# Generate with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
 JWT_SECRET=your-super-secure-jwt-secret-key-here-change-in-production
 JWT_EXPIRE=7d
 
@@ -17,8 +19,17 @@ ADMIN_PASSWORD=Admin123!@#
 # Frontend URL
 FRONTEND_URL=http://localhost:3000
 
+# CORS Origins (comma-separated for multiple origins)
+CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+
+# Cookie Domain (for production, uncomment and set to your domain)
+# COOKIE_DOMAIN=.yourdomain.com
+
 # Rate Limiting
 MAX_REQUESTS_PER_MINUTE=100
 
 # Security
 BCRYPT_ROUNDS=12
+
+# Logging
+LOG_LEVEL=debug
