--- a/client/.env.production
+++ b/client/.env.production
@@ -1,3 +1,6 @@
+# API Configuration - Using same domain (monorepo deployment)
+REACT_APP_API_URL=/api
+
 # Disable source maps in production (reduces bundle size)
 GENERATE_SOURCEMAP=false
 
