--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
+  "buildCommand": "cd client && npm install && npm run build",
+  "outputDirectory": "client/build",
+  "installCommand": "npm install --prefix client && npm install --prefix server",
   "rewrites": [
     {
+      "source": "/api/:path*",
+      "destination": "/server/server.js"
+    },
+    {
       "source": "/(.*)",
-      "destination": "/index.html"
+      "destination": "/client/build/index.html"
     }
   ],
   "headers": [
@@ -33,5 +40,11 @@
         }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "server/server.js": {
+      "memory": 512,
+      "maxDuration": 10
+    }
+  }
 }
