fix: include server folder in vercel functions

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
   "buildCommand": "cd client && npm run build",
   "outputDirectory": "client/build",
+  "functions": {
+    "api/*.js": {
+      "includeFiles": "server/**"
+    }
+  },
   "rewrites": [
     {
       "source": "/api/:path*",
