--- a/client/.env.production
+++ b/client/.env.production
@@ -1,5 +1,5 @@
-# API Configuration - Using same domain (monorepo deployment)
-REACT_APP_API_URL=/api
+# API Configuration - Update with your backend URL after deploying server
+REACT_APP_API_URL=https://your-backend-url.vercel.app/api
 
 # Disable source maps in production (reduces bundle size)
 GENERATE_SOURCEMAP=false
