--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,5 @@
 {
   "buildCommand": "cd client && npm run build",
   "outputDirectory": "client/build",
-  "functions": {
-    "api/*.js": {
-      "includeFiles": "server/**"
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "/api"
-    }
-  ]
+  "installCommand": "cd client && npm install"
 }
