fix: update vercel config and env for frontend deployment

--- a/client/.env.production
+++ b/client/.env.production
@@ -1,5 +1,5 @@
-# API Configuration - Update with your backend URL after deploying server
-REACT_APP_API_URL=https://your-backend-url.vercel.app/api
+# API Configuration - Backend deployed at purcmium-backend.vercel.app
+REACT_APP_API_URL=https://purcmium-backend.vercel.app/api
 
 # Disable source maps in production (reduces bundle size)
 GENERATE_SOURCEMAP=false
